tdf#106047 Fix case-insensitive search in autofilter

Change-Id: I67899789b0a51a3a04c2085cbab8c0ed62903413